src/objects/FTP_Config__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>FTP_Password__c</fullName>
        <label>FTP Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTP_URL__c</fullName>
        <label>FTP URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTP_Username__c</fullName>
        <label>FTP Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTPS_Connection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FTPS Connection?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Heroku_End_Point_URL__c</fullName>
        <label>Heroku End Point URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Name__c</fullName>
        <description>Used for Internal purpose</description>
        <inlineHelpText>Used for Internal purpose</inlineHelpText>
        <label>Org Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Directory_Path__c</fullName>
        <description>Directory Path of the server where file needs to be send.</description>
        <inlineHelpText>Directory Path of the server where file needs to be send.</inlineHelpText>
        <label>Directory Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port__c</fullName>
        <description>Port number using which connection will established.</description>
        <inlineHelpText>Port number using which connection will established.</inlineHelpText>
        <label>Port</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFTP_Server__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate the server is SFTP type or not.</description>
        <inlineHelpText>Flag to indicate the server is SFTP type or not.</inlineHelpText>
        <label>SFTP Server?</label>
        <type>Checkbox</type>
    </fields>
    <label>FTP Config</label>
    <listViews>
        <fullName>All_Details</fullName>
        <columns>NAME</columns>
        <columns>FTP_URL__c</columns>
        <columns>FTP_Username__c</columns>
        <columns>FTP_Password__c</columns>
        <columns>Heroku_End_Point_URL__c</columns>
        <columns>Org_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Details</label>
    </listViews>
</CustomObject>